--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "client/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/client/src",
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project client --web",
