--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "~18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -61,10 +63,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "objection": "^3.1.5",
