--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -48,10 +48,10 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.5.0",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
@@ -62,6 +62,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.69.0",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
