chore: Fix server import errrors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@full-stack-project/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "client": "npx nx serve client",
+    "api": "npx nx serve api"
+  },
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
